--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,27 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
-<body>
-    <h2>Create a New Listing</h2>
-    <form method="POST" action="/listings" >
-        <input name="listing[title]" placeholder="enter title" type="text">
-        <br><br>
-        <textarea name="listing[description]" placeholder="enter description" id=""></textarea>
-        <br><br>
-        <input name="listing[image]" placeholder="enter image URL/link" type="text">
-        <br><br>
-        <input name="listing[price]" placeholder="enter price" type="number">
-        <br><br>
-        <input name="listing[country]" placeholder="enter country" type="text">
-        <br><br>
-        <input name="listing[location]" placeholder="enter location" type="text">
-        <br><br>
-        <button>Add</button>
+    <% layout("/layouts/boilerplate") %>
+    <div class="row mt-3">
+    <div class="col-8 offset-2">
+      <br><br>
+    <h2>Create a New Listing</h2> <br>
+    <form method="POST" action="/listings" class="needs-validation" novalidate >
+        <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+        <input name="listing[title]" placeholder="Add a Catchy title" type="text" class="form-control" required>
+        <div class="valid-feedback">Title looks good!</div>
+        </div>
+        
+
+        <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <textarea name="listing[description]" placeholder="Enter description" class="form-control" required></textarea>
+            <div class="invalid-feedback">Please enter a short description</div>
+        </div>
+        
+
+       <div class="mb-3"> 
+        <label for="image" class="form-label">Image Link</label>
+        <input name="listing[image]" placeholder="Enter image URL/link" type="text" class="form-control">
+       </div>
+        
+
+       <div class="row">
+        <div class="mb-3 col-md-8">
+            <div class="row">
+                <div class="mb-3 col-4">
+                    <label for="price" class="form-label">Price</label>
+                    <input name="listing[price]" placeholder="1200"  class="form-control" required>
+                    <div class="invalid-feedback">Price should be valid</div>
+                </div>
+                
+        
+                <div class="mb-3 col-md-8">
+                    <label for="country" class="form-label">Country</label>
+                    <input name="listing[country]" placeholder="India" type="text" class="form-control" required>
+                    <div class="invalid-feedback">Country name should be valid</div>
+                </div>
+            </div>
+        </div>
+       </div>
+        
+        
+        <div class="mb-3"> 
+            <label for="location" class="form-label">Location</label>
+            <input name="listing[location]" placeholder="Hyderabad,Telangana" type="text" class="form-control" required>
+            <div class="invalid-feedback">Location should be valid</div>
+        </div>
+        
+        <button class="btn btn-dark add-btn mt-3">Add</button> <br><br>
 
     </form>
-</body>
-</html>
+    </div>
+    </div>
+
