--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,32 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
-</head>
-<body>
-    <h3>Listing Details:</h3>
-    <ul>
-        <li><%= listing.title %></li>
-        <li><%= listing.description %></li>
-        <li>&#8377; <%= listing.price.toLocaleString("en-IN") %></li>
-        <li><%= listing.location %></li>
-        <li><%= listing.country %></li>
-    </ul>
+<% layout("/layouts/boilerplate") %>
+    
+ <div class="row mt-3">
+        <div class="col-8 offset-3">
+            <h3>Listing Details:</h3>
+        </div>
+
+    <div class="card col-6 offset-3 show-card">
+        <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
+        <div class="card-body">
+            <p class="card-text">
+                <b><%= listing.title %></b> <br>
+                <%= listing.description %> <br>
+                &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
+                <%= listing.location %> <br>
+                <%= listing.country %>
+            </p>
+        </div>
+    </div>
+    
     <br>
-    <button><a href="/listings/<%= listing._id %>/edit">Edit this Listing</a></button>
-    <br><br>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE" >
-        <button class="delete-form">Delete</button>
-    </form>
+    <div class="btns">
+        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark  col-1 offset-3 edit-btn">Edit</a>
+    
+        <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE" >
+            <button class="delete-form btn btn-dark offset-5">Delete</button>
+        </form>
+    </div>
+ </div>
+
 
     <script>
         console.log("Script loaded"); // Debugging line to check if the script is loaded
 
         let btns = document.querySelectorAll(".delete-form");
         btns.forEach(btn => {
-            btn.addEventListener('submit', function(event) {
+            btn.addEventListener('click', function(event) {
                     const confirmed = confirm("Are you sure you want to delete this chat?");
                     if (!confirmed) {
                         event.preventDefault(); // Prevent the form submission
@@ -35,5 +43,4 @@
             });
 
     </script>
-</body>
-</html>
+
