--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,14 +2,14 @@
     
  <div class="row mt-3">
         <div class="col-8 offset-3">
-            <h3>Listing Details:</h3>
+            <h3><%= listing.title %></h3>
         </div>
 
     <div class="card col-6 offset-3 show-card">
         <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
             <p class="card-text">
-                <b><%= listing.title %></b> <br>
+                
                 <%= listing.description %> <br>
                 &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
                 <%= listing.location %> <br>
@@ -27,7 +27,23 @@
         </form>
     </div>
  </div>
+ <hr>
 
+ 
+ <div class="col-8 offest-3 mt-3">
+    <h4>Leave a Review</h4>
+    <form action="">
+        <div class="mb-3 mt-3">
+            <label for="rating">Rating</label>
+            <input type="range" min="1" max="5" id="rating" name="review[rating] form-range" >
+        </div>
+        <div  class="mb-3 mt-3"> 
+            <label for="comment" class="form-label">Comments</label>
+            <textarea name="review[comment]" id="comment" cols="30" rows="6" class="form-control"></textarea>
+        </div>
+        <button class="btn btn-outline-dark">Submit</button>
+    </form>
+ </div>
 
     <script>
         console.log("Script loaded"); // Debugging line to check if the script is loaded
