--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,11 +1,11 @@
 <% layout("/layouts/boilerplate") %>
     
  <div class="row mt-3">
-        <div class="col-8 offset-3">
+        <div class="col-8 offset-2">
             <h3><%= listing.title %></h3>
         </div>
 
-    <div class="card col-6 offset-3 show-card">
+    <div class="card col-8 offset-2 show-card">
         <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
             <p class="card-text">
@@ -19,32 +19,47 @@
     </div>
     
     <br>
-    <div class="btns">
-        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark  col-1 offset-3 edit-btn">Edit</a>
+    <div class="btns col-8 offset-2 mt-3">
+        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark edit-btn col-2">Edit</a>
     
         <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE" >
-            <button class="delete-form btn btn-dark offset-5">Delete</button>
+            <button class="delete-form btn btn-dark offset-5 ">Delete</button>
         </form>
     </div>
- </div>
- <hr>
 
- 
- <div class="col-8 offest-3 mt-3">
-    <h4>Leave a Review</h4>
-    <form action="">
-        <div class="mb-3 mt-3">
-            <label for="rating">Rating</label>
-            <input type="range" min="1" max="5" id="rating" name="review[rating] form-range" >
-        </div>
-        <div  class="mb-3 mt-3"> 
-            <label for="comment" class="form-label">Comments</label>
-            <textarea name="review[comment]" id="comment" cols="30" rows="6" class="form-control"></textarea>
-        </div>
-        <button class="btn btn-outline-dark">Submit</button>
-    </form>
- </div>
+    
+    <div class="col-8 offset-2 mb-3 mt-3">
+        <hr>
+        <h4>Leave a Review</h4>
+        <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
+            <div class="mb-3 mt-3">
+                <label for="rating" class="form-label">Rating</label>
+                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+            </div>
+            <div  class="mb-3 mt-3"> 
+                <label for="comment" class="form-label">Comments</label>
+                <textarea 
+                name="review[comment]" 
+                id="comment" 
+                cols="30" 
+                rows="5" 
+                class="form-control" required></textarea>
+                <div class="invalid-feedback">Please submit some comments for Review</div>
+            </div>
+            <button class="btn btn-outline-dark">Submit</button>
+        </form>
 
+        <hr>
+        <h4>All Reviews</h4>
+        <p><%= listing.reviews %></p>
+        <!-- <ul>
+            <% for(review of listing.reviews) { %>
+                   <li><%= review.comment %>, <%= review.rating %></li> 
+            <% } %>
+        </ul> -->
+
+    </div>
+ </div>   
     <script>
         console.log("Script loaded"); // Debugging line to check if the script is loaded
 
