updated till 10nov

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -51,12 +51,12 @@
 
         <hr>
         <h4>All Reviews</h4>
-        <p><%= listing.reviews %></p>
-        <!-- <ul>
+        <!-- <p><%= listing.reviews %></p> -->
+        <ul>
             <% for(review of listing.reviews) { %>
                    <li><%= review.comment %>, <%= review.rating %></li> 
             <% } %>
-        </ul> -->
+        </ul>
 
     </div>
  </div>   
